[metadata]
name = networking-fujitsu
version = 2015.2.0
summary = FUJITSU ML2 plugins/drivers for OpenStack Neutron
description-file =
    README.rst
author = Yushiro Furukawa
author-email = y.furukawa_2@jp.fujitsu.com
home-page = https://github.com/openstack/networking-fujitsu
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_fujitsu
data_files =
    etc/neutron/plugins/ml2 =
        etc/neutron/plugins/ml2/ml2_conf_fujitsu_cfab.ini
        etc/neutron/plugins/ml2/ml2_conf_fujitsu_ism.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    fujitsu_cfab = networking_fujitsu.ml2.drivers.fujitsu.cfab.mechanism_fujitsu:FujitsuMechanism
    fujitsu_ism = networking_fujitsu.ml2.drivers.fujitsu.ism.mech_fujitsu_ism:FujitsuIsmDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_fujitsu/locale
domain = networking-fujitsu

[update_catalog]
domain = networking-fujitsu
output_dir = networking_fujitsu/locale
input_file = networking_fujitsu/locale/networking-fujitsu.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_fujitsu/locale/networking-fujitsu.pot
